<resources>
    <string name="app_name">IAInteractive Movies</string>
    <string name="bodyRequest">country_code=MX&amp;username=%1$s&amp;password=%2$s&amp;grant_type=password&amp;client_id=IATestCandidate&amp;client_secret=c840457e777b4fee9b510fbcd4985b68</string>
    <string name="error_message_by_default">Ocurrió un problema, intente nuevamente.</string>
    <string name="label_accept_button">Aceptar</string>
    <string name="label_user_login">Usuario</string>
    <string name="label_pass_login">Contraseña</string>
    <string name="label_btn_login">Iniciar sesión</string>
    <string name="label_empty_field_error">This field is required</string>

    <string name="label_full_name">%1$s %2$s</string>


    <string name="menu_1">Perfil</string>
    <string name="menu_2">Cartelera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_without_data">N/A</string>
    <string name="label_profile_title">Profile</string>
    <string name="label_movies_title">Movies</string>
    <string name="label_email">Email</string>
    <string name="label_name">Name</string>
    <string name="label_hint_email_default">username@gmail.com</string>
    <string name="label_hint_name_default">Pedro Perez</string>
    <string name="label_phone">Phone</string>
    <string name="label_hint_phone_default">536 736 8393</string>
    <string name="label_card_numer">Card number</string>
    <string name="label_hint_card_default">1234567634233</string>

    <string name="label_clasifitcation">Clasification</string>
    <string name="label_genre">Genre</string>
    <string name="label_duration">Duration</string>
    <string name="label_rating">Rating</string>
    <string name="label_hint_genre_default">Action</string>
    <string name="label_hint_duration_default">0:00</string>
    <string name="label_hint_rating_default">S/c</string>
    <string name="label_hint_clasification_default">Reservado</string>
    <string name="label_synopsis">Synopsis</string>

    <string name="txt_overview">Overview</string>
    <string name="txt_general_info">General Info</string>
</resources>