<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity"
    android:padding="40dp"
    android:background="@drawable/background_login_movies">

    <EditText
        android:id="@+id/edt_txt_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/label_user_login"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:maxLines="1"
        android:background="@drawable/edittext_background"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_txt_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/label_pass_login"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_txt_user"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_txt_pass"/>

    <ProgressBar
        android:id="@+id/homeLoader"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>